--- a/src/cambodia.html
+++ b/src/cambodia.html
@@ -110,6 +110,104 @@
     <figcaption itemprop="caption description">Image caption</figcaption>
   </figure>
 
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/cambodia/2.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/cambodia/thumbs/2.jpg" itemprop="thumbnail" alt="Cambodia" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/cambodia/3.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/cambodia/thumbs/3.jpg" itemprop="thumbnail" alt="Cambodia" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/cambodia/4.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/cambodia/thumbs/4.jpg" itemprop="thumbnail" alt="Cambodia" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/cambodia/5.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/cambodia/thumbs/5.jpg" itemprop="thumbnail" alt="Cambodia" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/cambodia/6.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/cambodia/thumbs/6.jpg" itemprop="thumbnail" alt="Cambodia" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/cambodia/7.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/cambodia/thumbs/7.jpg" itemprop="thumbnail" alt="Cambodia" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/cambodia/8.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/cambodia/thumbs/8.jpg" itemprop="thumbnail" alt="Cambodia" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/cambodia/9.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/cambodia/thumbs/9.jpg" itemprop="thumbnail" alt="Cambodia" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/cambodia/10.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/cambodia/thumbs/10.jpg" itemprop="thumbnail" alt="Cambodia" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/cambodia/11.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/cambodia/thumbs/11.jpg" itemprop="thumbnail" alt="Cambodia" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/cambodia/12.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/cambodia/thumbs/12.jpg" itemprop="thumbnail" alt="Cambodia" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/cambodia/13.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/cambodia/thumbs/13.jpg" itemprop="thumbnail" alt="Cambodia" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/cambodia/14.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/cambodia/thumbs/14.jpg" itemprop="thumbnail" alt="Cambodia" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/cambodia/15.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/cambodia/thumbs/15.jpg" itemprop="thumbnail" alt="Cambodia" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
 </div>
 
 
