--- a/src/malaysia.html
+++ b/src/malaysia.html
@@ -102,12 +102,77 @@
 
 
 <div class="my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
+
   <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
     <a href="/img/photos/malaysia/1.jpg" itemprop="contentUrl" data-size="1024x575">
         <img src="/img/photos/malaysia/thumbs/1.jpg" itemprop="thumbnail" alt="Malaysia" />
     </a>
     <figcaption itemprop="caption description">Image caption</figcaption>
   </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/malaysia/2.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/malaysia/thumbs/2.jpg" itemprop="thumbnail" alt="Malaysia" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/malaysia/3.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/malaysia/thumbs/3.jpg" itemprop="thumbnail" alt="Malaysia" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/malaysia/4.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/malaysia/thumbs/4.jpg" itemprop="thumbnail" alt="Malaysia" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/malaysia/5.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/malaysia/thumbs/5.jpg" itemprop="thumbnail" alt="Malaysia" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/malaysia/6.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/malaysia/thumbs/6.jpg" itemprop="thumbnail" alt="Malaysia" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/malaysia/7.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/malaysia/thumbs/7.jpg" itemprop="thumbnail" alt="Malaysia" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/malaysia/8.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/malaysia/thumbs/8.jpg" itemprop="thumbnail" alt="Malaysia" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/malaysia/9.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/malaysia/thumbs/9.jpg" itemprop="thumbnail" alt="Malaysia" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/malaysia/10.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/malaysia/thumbs/10.jpg" itemprop="thumbnail" alt="Malaysia" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
 </div>
 
 
