--- a/src/thailand.html
+++ b/src/thailand.html
@@ -102,12 +102,77 @@
 
 
 <div class="my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
+
   <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
     <a href="/img/photos/thailand/1.jpg" itemprop="contentUrl" data-size="1024x575">
         <img src="/img/photos/thailand/thumbs/1.jpg" itemprop="thumbnail" alt="Thailand" />
     </a>
     <figcaption itemprop="caption description">Image caption</figcaption>
   </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/thailand/2.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/thailand/thumbs/2.jpg" itemprop="thumbnail" alt="Thailand" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/thailand/3.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/thailand/thumbs/3.jpg" itemprop="thumbnail" alt="Thailand" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/thailand/4.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/thailand/thumbs/4.jpg" itemprop="thumbnail" alt="Thailand" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/thailand/5.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/thailand/thumbs/5.jpg" itemprop="thumbnail" alt="Thailand" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/thailand/6.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/thailand/thumbs/6.jpg" itemprop="thumbnail" alt="Thailand" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/thailand/7.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/thailand/thumbs/7.jpg" itemprop="thumbnail" alt="Thailand" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/thailand/8.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/thailand/thumbs/8.jpg" itemprop="thumbnail" alt="Thailand" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/thailand/9.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/thailand/thumbs/9.jpg" itemprop="thumbnail" alt="Thailand" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/thailand/10.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/thailand/thumbs/10.jpg" itemprop="thumbnail" alt="Thailand" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
 </div>
 
 
