--- a/src/indonesia.html
+++ b/src/indonesia.html
@@ -102,12 +102,77 @@
 
 
 <div class="my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
+
   <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
     <a href="/img/photos/indonesia/1.jpg" itemprop="contentUrl" data-size="1024x575">
         <img src="/img/photos/indonesia/thumbs/1.jpg" itemprop="thumbnail" alt="Indonesia" />
     </a>
     <figcaption itemprop="caption description">Image caption</figcaption>
   </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/indonesia/2.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/indonesia/thumbs/2.jpg" itemprop="thumbnail" alt="Indonesia" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/indonesia/3.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/indonesia/thumbs/3.jpg" itemprop="thumbnail" alt="Indonesia" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/indonesia/4.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/indonesia/thumbs/4.jpg" itemprop="thumbnail" alt="Indonesia" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/indonesia/5.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/indonesia/thumbs/5.jpg" itemprop="thumbnail" alt="Indonesia" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/indonesia/6.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/indonesia/thumbs/6.jpg" itemprop="thumbnail" alt="Indonesia" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/indonesia/7.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/indonesia/thumbs/7.jpg" itemprop="thumbnail" alt="Indonesia" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/indonesia/8.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/indonesia/thumbs/8.jpg" itemprop="thumbnail" alt="Indonesia" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/indonesia/9.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/indonesia/thumbs/9.jpg" itemprop="thumbnail" alt="Indonesia" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/indonesia/10.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/indonesia/thumbs/10.jpg" itemprop="thumbnail" alt="Indonesia" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
 </div>
 
 
