--- a/src/vietnam.html
+++ b/src/vietnam.html
@@ -108,6 +108,76 @@
     </a>
     <figcaption itemprop="caption description">Image caption</figcaption>
   </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/vietnam/2.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/vietnam/thumbs/2.jpg" itemprop="thumbnail" alt="Vietnam" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/vietnam/3.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/vietnam/thumbs/3.jpg" itemprop="thumbnail" alt="Vietnam" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/vietnam/4.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/vietnam/thumbs/4.jpg" itemprop="thumbnail" alt="Vietnam" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/vietnam/5.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/vietnam/thumbs/5.jpg" itemprop="thumbnail" alt="Vietnam" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/vietnam/6.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/vietnam/thumbs/6.jpg" itemprop="thumbnail" alt="Vietnam" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/vietnam/7.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/vietnam/thumbs/7.jpg" itemprop="thumbnail" alt="Vietnam" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/vietnam/8.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/vietnam/thumbs/8.jpg" itemprop="thumbnail" alt="Vietnam" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/vietnam/9.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/vietnam/thumbs/9.jpg" itemprop="thumbnail" alt="Vietnam" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/vietnam/10.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/vietnam/thumbs/10.jpg" itemprop="thumbnail" alt="Vietnam" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
+
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/vietnam/11.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/vietnam/thumbs/11.jpg" itemprop="thumbnail" alt="Vietnam" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
 </div>
 
 
