Add daily video

--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
 
         <section class="white-stripe">
             <div class="container">
-                <p class="intro-text">Today it's <span id="today"></span> and we are back in Edinburgh!</p>
+                <p class="intro-text">Today it's <span id="today"></span> and we are back in Europe!</p>
             </div>
         </section>
 
@@ -165,6 +165,26 @@
                     </div>
                 </div>
             </div>
+        </section>
+
+        <section class="white-stripe video-section">
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-6">
+                <h3>Our journey is over!</h3>
+                <p>After 4 months of travelling around Asia, our journey has come to an end. Planes, trains, boats, buses, mini-buses, cars, tuk-tuks, motorbikes, bicycles and a lot of walking took us to some amazing places. One photo per day made this 30 seconds video which is the best souvenir we brought back!</p>
+                <p><i>" Travel makes one modest. You see what a tiny place you occupy in the world. "</i><br> – Gustave Flaubert</p>
+              </div>
+              <div class="col-sm-6">
+                  <div align="center" class="embed-responsive embed-responsive-16by9">
+                      <video controls poster="/img/banners/video.jpg" class="embed-responsive-item">
+                      <source src=videos/daily.mp4 type=video/mp4>
+                      Your browser does not support the video tag.
+                  </video>
+                  </div>
+              </div>
+            </div>
+          </div>
         </section>
 
         <footer>
