--- a/src/map.html
+++ b/src/map.html
@@ -60,7 +60,7 @@
 
     <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
 
-    <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+    <script src="//cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
 
     <script src="js/map.js" type="text/javascript"></script>
 
