--- a/src/vietnam.html
+++ b/src/vietnam.html
@@ -291,19 +291,19 @@
         </div>
 
 </div>
-    <script src="http://cdn.rawgit.com/dimsemenov/PhotoSwipe/master/dist/photoswipe.min.js"></script>
-    <script src="http://cdn.rawgit.com/dimsemenov/PhotoSwipe/master/dist/photoswipe-ui-default.min.js"></script>
+    <script src="//cdn.rawgit.com/dimsemenov/PhotoSwipe/master/dist/photoswipe.min.js"></script>
+    <script src="//cdn.rawgit.com/dimsemenov/PhotoSwipe/master/dist/photoswipe-ui-default.min.js"></script>
     <script src="js/photoswipe.js" type="text/javascript"></script>
 
     <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
 
 
-    <script src="http://masonry.desandro.com/masonry.pkgd.js" type="text/javascript"></script>
-    <script src="http://imagesloaded.desandro.com/imagesloaded.pkgd.js"></script>
+    <script src="//masonry.desandro.com/masonry.pkgd.js" type="text/javascript"></script>
+    <script src="//imagesloaded.desandro.com/imagesloaded.pkgd.js"></script>
     <script src="js/masonry-config.js"></script>
 
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/moment.js/2.6.0/moment.min.js" type="text/javascript"></script>
-    <script src="http://momentjs.com/downloads/moment-timezone-with-data-2012-2022.min.js" type="text/javascript"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.6.0/moment.min.js" type="text/javascript"></script>
+    <script src="//momentjs.com/downloads/moment-timezone-with-data-2012-2022.min.js" type="text/javascript"></script>
 
     <script src="js/main.js" type="text/javascript"></script>
 
