--- a/src/indonesia.html
+++ b/src/indonesia.html
@@ -36,8 +36,8 @@
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Libre+Baskerville:400,400italic,700' rel='stylesheet' type='text/css'>
 
     <!-- Photoswipe -->
-    <link href="http://cdn.rawgit.com/dimsemenov/PhotoSwipe/master/dist/photoswipe.css" rel="stylesheet" type="text/css">
-    <link href="http://cdn.rawgit.com/dimsemenov/PhotoSwipe/master/dist/default-skin/default-skin.css" rel="stylesheet" type="text/css">
+    <link href="https://cdn.rawgit.com/dimsemenov/PhotoSwipe/master/dist/photoswipe.css" rel="stylesheet" type="text/css">
+    <link href="https://cdn.rawgit.com/dimsemenov/PhotoSwipe/master/dist/default-skin/default-skin.css" rel="stylesheet" type="text/css">
 
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <script src="js/modernizr.js"></script> <!-- Modernizr -->
