--- a/src/map.html
+++ b/src/map.html
@@ -36,7 +36,7 @@
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Libre+Baskerville:400,400italic,700' rel='stylesheet' type='text/css'>
 
     <!-- Leafletjs -->
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css" />
 
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <script src="js/modernizr.js"></script> <!-- Modernizr -->
@@ -60,7 +60,7 @@
 
     <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
 
-    <script src="//cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+    <script src="//unpkg.com/leaflet@0.7.7/dist/leaflet.js"></script>
 
     <script src="js/map.js" type="text/javascript"></script>
 
